gccida/c0/recog_19
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24525:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24526:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24534:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24536:80: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( unsigned __int16)*( _DWORD *)x1f == 47 && rtx_equal_p( x1f->fld[0].rtx, recog_data_0.operand[1]) ) 
                                                                               ^~~~~~~~~~~~
                                                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24538:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2h = (  struct rtx_def *)x1f[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24539:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2h, recog_data_0.operand[0]) && ( ( 1 << ix86_cpu) & x86_partial_reg_stall) != 0 ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24541:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2h, recog_data_0.operand[0]) && ( ( 1 << ix86_cpu) & x86_partial_reg_stall) == 0 ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24564:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24565:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3c = (  struct rtx_def *)x2a[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24568:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24576:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24577:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] != 66) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24590:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24591:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = ( rtx)x2a[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24597:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24606:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24607:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] != 66) ) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24621:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/insn-recog.c:24622:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3d = ( rtx)x2a[1]; 
            ^~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_19/src/obj/insn-recog.o] Error 1
